added store page

--- a/app/www/store.html
+++ b/app/www/store.html
@@ -34,7 +34,7 @@
               <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" id="feed-link" class="btn btn-default navbar-btn">
+                    <button type="button" id="store-link" class="btn btn-default navbar-btn">
                         <span class="glyphicon glyphicon-heart"></span>
                     </button>
                     <button type="button" id="people-link" class="btn btn-default navbar-btn">
@@ -50,13 +50,13 @@
             </nav>
         </div>
         <div class="content">
-            <div id="feed-page">
+            <div id="store-page">
                 <div class="text-center">
                     <ul class="list-unstyled">
                     </ul>
                 </div>
             </div>
-            <div id="feed-detail-page" class='hide'>
+            <div id="store-detail-page" class='hide'>
 
                 div.align-center>ul.list-unstyled>li*4>(div>img[src=http://placehold.it/350X350/444444/cccccc&text=DEMO-$$])+(div>(h3{TITLE $$}+div>ul>li{INFO $$}*3))
             </div>
@@ -74,33 +74,23 @@
 
 
         <script type="text/javascript" src="js/product.model.js"></script>
-        <script type="text/javascript" src="js/feed.model.js"></script>
-        <script type="text/javascript" src="js/feed.collection.js"></script>
-        <script type="text/javascript" src="js/feed.view.js"></script>
+        <script type="text/javascript" src="js/store.model.js"></script>
+        <script type="text/javascript" src="js/store.collection.js"></script>
+        <script type="text/javascript" src="js/store.view.js"></script>
         <script type="text/javascript">
-            var event_manager = {};
-            _.extend(event_manager, Backbone.Events);
-
-            // var obj = new ProductModel();
-            
-            // obj.on("sync", function(){
-            //     console.log(obj.get("data").styleImages.default.imageURL);
-            //     var img = $("<img src='" + obj.get("data").styleImages.default.imageURL + "'/>");
-            //     $(".footer").append(img);
-            // });
-
-            // obj.fetch({
-            //     productId : '123450'
-            // });
-
-            var feedView = new FeedPageView();
-
-            
+            var storeView = new StorePageView();
         </script>
 
-        <script id="feed-template" type="text/x-handlebars-template">
+        <script id="store-template" type="text/x-handlebars-template">
             <li>
                 <div class="row image"><img src="{{imageUrl}}" height="350px" alt=""></div>
+                <div class="row">
+                    <div>{{title}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8">{{brand}}</div>
+                    <div class="col-xs-4">{{price}}</div>
+                </div>
                 <div class="row">
                     <div class="col-xs-6" data-id="{{productId}}" id="pass-button"><span class="glyphicon glyphicon-remove"></span></div>
                     <div class="col-xs-6" data-id="{{productId}}" id="like-button"><span class="glyphicon glyphicon-heart"></span></div>
