--- a/app/www/index.html
+++ b/app/www/index.html
@@ -35,6 +35,10 @@
                 <p class="event received">Device is Ready</p>
             </div>
             <a href="home.html"> HOME </a>
+            <br>
+            <br>
+            <br>
+            <a href="store.html"> STORE </a>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
