minor fixes for people follow code

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -39,6 +39,10 @@
             <br>
             <br>
             <a href="store.html"> STORE </a>
+            <br>
+            <br>
+            <br>
+            <a href="people.html"> PEOPLE </a>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
