--- a/app/www/people.html
+++ b/app/www/people.html
@@ -26,7 +26,6 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/people.css" />
         <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css" />
-        <script src="../hammer.js-master/hammer.min.js" type="text/javascript"></script>
         <title>People</title>
     </head>
     <body>
@@ -57,19 +56,19 @@
                 <!-- Follow Feed page content begin -->
                     <div class="content">
                         <h2>Following</h2>
-                     <div id="follow-page">
-                       <div class="text-center">
-                           <ul class="list-unstyled">
-                           </ul>
-                       </div>
-                    </div>
-                     <div id="people-follow-detail-page" class='hide'>
+                        <div id="follow-page">
+                            <div class="text-center">
+                                <ul class="list-unstyled">
+                                </ul>
+                            </div>
+                        </div>
+                        <div id="people-follow-detail-page" class='hide'>
 
-                          div.align-center>ul.list-unstyled>li*4>(div>img[src=http://placehold.it/350X350/444444/cccccc&text=DEMO-$$])+(div>(h3{TITLE $$}+div>ul>li{INFO $$}*3))
-                      </div>
+                            div.align-center>ul.list-unstyled>li*4>(div>img[src=http://placehold.it/350X350/444444/cccccc&text=DEMO-$$])+(div>(h3{TITLE $$}+div>ul>li{INFO $$}*3))
+                        </div>
                     </div>
                 <!-- End -->
-                 <div>
+                 <!-- <div>
                     <div class="page-header">
                         <h2>Following</h2>
                     </div>
@@ -83,7 +82,7 @@
                                  <progress value="22" max="100"></progress>
                         </li>    
                     </ul>
-                 </div>
+                 </div> -->
                  <!-- Follow Feed page content begin -->
 
                  <div>
