signup api complete

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -42,9 +42,11 @@
             <br>
             <br>
             <br>
-            <a onclick="login()"> LOGIN </a>
+            <a onclick="loginAPI.FBLogin()"> LOGIN </a>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/vendor/jquery.min.js"></script>
+        <script type="text/javascript" src="js/login.api.js"></script>
     </body>
 </html>
